--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "js-cookie": "^2.2.0",
     "vue-i18n": "^7.3.3",
+    "vue-socket.io": "^2.1.1-b",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
