--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.3.0",
+    "koa": "^2.5.1",
+    "koa-static": "^5.0.0",
+    "koa2-connect-history-api-fallback": "^0.0.6",
     "quasar-cli": "^0.16.0"
   },
   "engines": {
