--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa2-connect-history-api-fallback": "^0.0.6",
     "mongoose": "^5.1.4",
     "socket.io": "^2.1.1",
     "utility": "^1.13.1"
