--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.3.0",
-    "koa": "^2.5.1",
-    "koa-static": "^5.0.0",
-    "quasar-cli": "^0.16.0"
+    "quasar-cli": "^0.17.23",
+    "strip-ansi": "=3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
